--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-.container img {
-    margin : 12px 0px 0px 30px;
+    font-family: 'Quicksand', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 #header_value {
@@ -15,11 +13,13 @@
 
 #logo {
     height: 75px;
+    margin : 12px 0px 0px 30px;
 }
+
 #title {
-    height: 130px;
+    font-weight: bold;
+    height: 140px;
     font-size: 55px;
-    font-family: 'Roboto', sans-serif;
     vertical-align: middle;
     display: inline-block
 }
@@ -27,4 +27,50 @@
 
 body {
     background-color: #00B2EE;
+
+}
+
+.whitecontainer {
+    background-color: white;
+    height: 700px;
+    width: 70%;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 10px;
+}
+.space {
+}
+
+.add_task {
+    background-color: #00B2EE;
+    height: 40px;
+    width: 100px;
+    text-align: center;
+    border-radius: 7px;
+    line-height: 40px;
+    margin: 20px 0px 10px 100px;
+    display: inline-block;
+    font-weight: bold;
+}
+.add_sections{
+    margin-left: 25px;
+    border: 2px solid lightgray;
+    height: 40px;
+    width: 100px;
+    text-align: center;
+    border-radius: 7px;
+    line-height: 40px;
+    display:inline-block
+}
+.margin_left {
+    margin-left: 100px;
+}
+
+h2::before {
+    content: "\2714";
+}
+.check::before{
+    content: "\2713";
+.check {
+    color: lightgreen;
 }
