--- a/css/style.css
+++ b/css/style.css
@@ -83,10 +83,11 @@ h2::before {
     width: 20px;
     height: 20px;
     display: inline-block;
-    line-height: 15px;
+    line-height: 19px;
     margin-right: 15px;
     font-weight: bold;
     font-size: 13px;
+    text-align: center;
 }
 .font {
     font-size: 20px;
