--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 
 body {
     background-color: #00B2EE;
-
 }
 
 #header_value {
@@ -26,7 +25,7 @@ body {
     height: 120px;
     font-size: 45px;
     vertical-align: middle;
-    display: inline-block
+    display: inline-block;
 }
 
 .whitecontainer {
