--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,12 @@ body {
     height: 40px;
     width: 100px;
     text-align: center;
-    border-radius: 7px;
+    border-radius: 10px;
     line-height: 40px;
     margin: 20px 0px 10px 100px;
     display: inline-block;
     font-weight: bold;
+    border:none;
 }
 
 .add_sections{
@@ -55,7 +56,7 @@ body {
     height: 40px;
     width: 100px;
     text-align: center;
-    border-radius: 7px;
+    border-radius: 10px;
     line-height: 40px;
     display:inline-block
 }
